--- a/SQLInjection/nbproject/project.properties
+++ b/SQLInjection/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SQLInjection
+application.vendor=S542407
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,11 +29,13 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Dommati_exam02.jar
+dist.jar=${dist.dir}/SQLInjection.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Dommati_exam02
+dist.jlink.output=${dist.jlink.dir}/SQLInjection
+endorsed.classpath=
 excludes=
+file.reference.ojdbc8.jar=../../../Desktop/ADB/ojdbc.jar/ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -40,7 +43,8 @@ javac.classpath=
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
+javac.modulepath=\
+    ${file.reference.ojdbc8.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
@@ -70,8 +74,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Dommati_exam02
-main.class=question1.Question1Driver
+jlink.launcher.name=SQLInjection
+main.class=sqlinjection.SQLInjection
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
