--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 /EqualsHashClassDemo/nbproject/private/
 /EqualsHashClassDemo/build/
 /Dommati_Lab10CastingAndExceptions/nbproject/private/
+/Dommati_Lab10CastingAndExceptions/build/
+/Dommati_Lab10CastingAndExceptions/dist/
+/Dommati_FinalExam/nbproject/private/
+/Dommati_FinalExam/build/
+/Dommati_FinalExam/dist/
+/FinalExamQuestion12/nbproject/private/
+/FinalExamQuestion12/build/
+/FinalExamQuestion12/dist/
